--- a/submit.html
+++ b/submit.html
@@ -98,9 +98,24 @@
     <div id="art" style="text-align: left;">
       <h2 id="art" class="gradient-heading-blue" style="margin-top: 4rem;">Art Guidelines</h2>
       <p>We’re accepting cyberpunk-themed visual art for digital publication. Any medium is welcome—digital, hand-drawn, or mixed—except photography. If it feels cyberpunk, we want to see it.</p>
+      
+      <!-- Info Table -->
+      <table style="width: 100%; border-collapse: collapse; margin-top: 2rem; max-width: 700px;">
+        <tr>
+          <td style="padding: 0.5rem; font-weight: bold; vertical-align: top;">Word Limit</td>
+          <td style="padding: 0.5rem;">500 – 10,000 words</td>
+        </tr>
+        <tr style="background-color: var(--bg-deep-2);">
+          <td style="padding: 0.5rem; font-weight: bold; vertical-align: top;">Pay Rate</td>
+          <td style="padding: 0.5rem;">Because this is a free magazine without ads, we can't offer any payment at this time. It’s our goal to eventually pay a competitive per-word rate, but we’re not quite there yet. We get it if that's a non-starter for you.</td>
+        </tr>
+        <tr>
+          <td style="padding: 0.5rem; font-weight: bold; vertical-align: top;">How to Submit</td>
+          <td style="padding: 0.5rem;">Email <a href="mailto:contact@burnlinemag.com" style="color: var(--cyan);">contact@burnlinemag.com</a> with a link to your artwork wherever it's hosted (online portfolio, Reddit post, whatever). Please include the word <strong>"Submission"</strong> in the subject line.</td>
+        </tr>
+      
+      </table>
        <p> If selected, your artwork will be added to the digital issue of the magazine and included on our Art page. You'll be fully credited on the magazine and site, including whatever name and profile/social handles you'd like to include. </p></p>
-
-      <p><strong>How to Submit:</strong> Email <a href="mailto:contact@burnlinemag.com" style="color: var(--cyan);">contact@burnlinemag.com</a> with a link to your artwork wherever it's hosted (online portfolio, Reddit post, whatever). Please include the word <strong>"Submission"</strong> in the subject line.</p>
       <p><strong>No AI-generated or AI-assisted work will be accepted.</strong></p>
     </div>
 
