--- a/submit.html
+++ b/submit.html
@@ -102,8 +102,8 @@
       <!-- Info Table -->
       <table style="width: 100%; border-collapse: collapse; margin-top: 2rem; max-width: 700px;">
         <tr>
-          <td style="padding: 0.5rem; font-weight: bold; vertical-align: top;">Word Limit</td>
-          <td style="padding: 0.5rem;">500 – 10,000 words</td>
+          <td style="padding: 0.5rem; font-weight: bold; vertical-align: top;">Artword Specs</td>
+          <td style="padding: 0.5rem;">Cover art should be viewable in portrait orientation, sized at 8.5" × 11" (2550 × 3300 pixels) at 300 dpi. Please have a PNG or high-quality JPG available if selected. Inner-issue art can be any dimmension.</td>
         </tr>
         <tr style="background-color: var(--bg-deep-2);">
           <td style="padding: 0.5rem; font-weight: bold; vertical-align: top;">Pay Rate</td>
