--- a/submit.html
+++ b/submit.html
@@ -92,6 +92,10 @@
             <p>Please feel free to submit your work to any other publications while you're waiting to hear back from us—just let us know if it gets picked up. If we take a while to respond, we haven't forgotten your work, we're just moving through the backlog. Thanks for your patience.</p>
       <p><strong>No AI-generated or AI-assisted work will be accepted.</strong></p>
     </div>
+        <div style="text-align: left; margin-top: 3rem;">
+      <h3>Cover Letters</h3>
+      <p>Emails and cover letters are <em>much less important</em> to us than your fiction or artwork. If a part of your personal story contributes to what you've made, we’d love to hear about it—but otherwise, keep it simple. We're here for the work itself.</p>
+    </div>
     </div>
 
     <!-- Art Guidelines Section -->
