--- a/submit.html
+++ b/submit.html
@@ -101,6 +101,26 @@
     .info-table tr:nth-child(2n) {
       background: var(--bg-deep-2);
     }
+    /* Stack tabs on narrow screens */
+@media (max-width: 520px) {
+  .tablist {
+    flex-direction: column;      /* stack */
+    align-items: stretch;
+    justify-content: flex-start; /* override center */
+    gap: 0.6rem;
+    border-bottom: 0;            /* no underline when vertical */
+    padding-bottom: 0;
+    overflow-x: visible;
+  }
+  .tab {
+    width: 100%;
+    text-align: center;
+    border-radius: 12px;         /* softer when full-width */
+    padding: 0.7rem 1rem;
+    font-size: 1rem;
+  }
+}
+
 
     /* Small tweaks for narrow screens */
     @media (max-width: 560px) {
