--- a/staffpicks.html
+++ b/staffpicks.html
@@ -260,9 +260,9 @@
       <span>BURNLINE</span>
     </a>
 
-    <button class="hamburger" id="hamburger" aria-controls="site-nav" aria-expanded="false" aria-label="Toggle menu">
-      <div></div><div></div><div></div>
-    </button>
+<div class="hamburger" id="hamburger" aria-controls="site-nav" aria-expanded="false" aria-label="Toggle menu">
+  <div></div><div></div><div></div>
+</div>
 
     <nav class="site-nav" id="site-nav">
       <a href="fiction.html">Issues</a>
