--- a/stories.html
+++ b/stories.html
@@ -34,6 +34,7 @@
       -webkit-text-fill-color: transparent;
       margin: 0 0 1rem 0;
       font-family: 'Orbitron', sans-serif;
+       text-align: center;
     }
     .page-intro p {
       font-size: 1.1rem;
