--- a/submit.html
+++ b/submit.html
@@ -145,6 +145,7 @@
     </div>
     <nav class="site-nav" id="site-nav">
       <a href="fiction.html">Issues</a>
+      <a href="stories.html">Stories</a>
       <a href="art.html">Art</a>
       <a href="https://bowliopia.github.io/burnline/about.html">About</a>
       <a href="submit.html" aria-current="page">Submit</a>
