--- a/staffpicks.html
+++ b/staffpicks.html
@@ -266,6 +266,7 @@
 
     <nav class="site-nav" id="site-nav">
       <a href="fiction.html">Issues</a>
+      <a href="stories.html">Stories</a>
       <a href="art.html">Art</a>
       <a href="about.html">About</a>
       <a href="submit.html">Submit</a>
