--- a/art.html
+++ b/art.html
@@ -188,6 +188,7 @@
     </div>
     <nav class="site-nav" id="site-nav">
       <a href="fiction.html">Issues</a>
+      <a href="stories.html">Stories</a>
       <a href="art.html">Art</a>
       <a href="about.html">About</a>
       <a href="submit.html">Submit</a>
