--- a/staffpicks.html
+++ b/staffpicks.html
@@ -415,23 +415,23 @@
         </div>
       </div>
 
-      <div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Pattern Recognition">
-        <img src="Pattern Recognition.jpg" alt="">
-        <h3>Pattern Recognition</h3>
+      <div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Count Zero">
+        <img src="Count Zero.jpg" alt="">
+        <h3>Count Zero</h3>
         <small>William Gibson</small>
         <div class="card-overlay">
           <div class="overlay-content">
-            A post-9/11 exploration of identity, branding, and connection.
+            William Gibson’s Count Zero drops you into a neon-lit tangle of mercenaries, hackers, and art dealers whose lives collide inside the shifting landscape of cyberspace. It’s a fast, layered ride where street-level grit meets an emerging godlike AI that’s rewriting the rules of Gibson’s cyberpunk world..
             <br><br>
             Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section. If they have a used section, this book will cost you like $4 and you'll support the good guys instead of the mega-corp.
           </div>
         </div>
       </div>
 
-      <div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Cryptonomicon">
-        <img src="Cryptonomicon.jpg" alt="">
-        <h3>Cryptonomicon</h3>
-        <small>Neal Stephenson</small>
+      <div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Altered Carbon">
+        <img src="Altered Carbon.jpg" alt="">
+        <h3>Altered Carbon</h3>
+        <small>Richard Morgan</small>
         <div class="card-overlay">
           <div class="overlay-content">
             A sprawling tale of code, war, and information age power.
@@ -445,6 +445,32 @@
         <img src="Synners.jpg" alt="">
         <h3>Synners</h3>
         <small>Pat Cadigan</small>
+        <div class="card-overlay">
+          <div class="overlay-content">
+            A prescient look at digital identity and networked consciousness.
+            <br><br>
+            Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section. If they have a used section, this book will cost you like $4 and you'll support the good guys instead of the mega-corp.
+          </div>
+        </div>
+      </div>
+
+            <div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Blame!">
+        <img src="Blame!.jpg" alt="">
+        <h3>Blame</h3>
+        <small>Tsutomu Nihei</small>
+        <div class="card-overlay">
+          <div class="overlay-content">
+            A prescient look at digital identity and networked consciousness.
+            <br><br>
+            Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section. If they have a used section, this book will cost you like $4 and you'll support the good guys instead of the mega-corp.
+          </div>
+        </div>
+      </div>
+
+                  <div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Burning Chrome">
+        <img src="Burning Chrome.jpg" alt="">
+        <h3>Burning Chrome</h3>
+        <small>William Gibson</small>
         <div class="card-overlay">
           <div class="overlay-content">
             A prescient look at digital identity and networked consciousness.
