--- a/staffpicks.html
+++ b/staffpicks.html
@@ -468,7 +468,7 @@
       </div>
 
                   <div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Burning Chrome">
-        <img src="Burning Chrome.jpg" alt="">
+        <img src="Burning Chrome.png" alt="">
         <h3>Burning Chrome</h3>
         <small>William Gibson</small>
         <div class="card-overlay">
