--- a/staffpicks.html
+++ b/staffpicks.html
@@ -388,6 +388,20 @@
         </div>
       </div>
 
+            <div class="story-card" data-category="games" tabindex="0" aria-label="Open details for Perfect Dark">
+        <img src="Perfect Dark.jpg" alt="">
+        <h3>Perfect Dark</h3>
+        <small>Ubisoft</small>
+        <div class="card-overlay">
+          <div class="overlay-content">
+            Everyone knows Far Cry 3 was the best Far Cry, and the retro-futuristic '80s action parody dlc matches that speed.
+            <p class="steam-link">
+              <a href="https://store.steampowered.com/app/233270/Far_Cry_3_Blood_Dragon/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
+            </p>
+          </div>
+        </div>
+      </div>
+
       <!-- Books -->
       <div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Neuromancer">
         <img src="Neuromancer.png" alt="">
@@ -456,7 +470,7 @@
 
             <div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Blame!">
         <img src="Blame!.jpg" alt="">
-        <h3>Blame</h3>
+        <h3>Blame!</h3>
         <small>Tsutomu Nihei</small>
         <div class="card-overlay">
           <div class="overlay-content">
@@ -480,6 +494,19 @@
         </div>
       </div>
 
+                        <div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Schismatrix Plus">
+        <img src="Schismatrix Plus.jpg" alt="">
+        <h3>Schismatrix Plus</h3>
+        <small>Bruce Sterling</small>
+        <div class="card-overlay">
+          <div class="overlay-content">
+            A prescient look at digital identity and networked consciousness.
+            <br><br>
+            Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section. If they have a used section, this book will cost you like $4 and you'll support the good guys instead of the mega-corp.
+          </div>
+        </div>
+      </div>
+
       <!-- Film and TV -->
       <div class="story-card" data-category="film" tabindex="0" aria-label="Open details for Cyberpunk Edgerunners">
         <img src="CP Edgerunners.jpg" alt="">
@@ -493,6 +520,15 @@
       <div class="story-card" data-category="film" tabindex="0" aria-label="Open details for Ghost in the Shell">
         <img src="Ghost in the Shell.jpg" alt="">
         <h3>Ghost in the Shell</h3>
+        <small>Mamoru Oshii</small>
+        <div class="card-overlay">
+          <div class="overlay-content">A philosophical dive into cybernetic identity.</div>
+        </div>
+      </div>
+
+            <div class="story-card" data-category="film" tabindex="0" aria-label="Open details for Ghost in the Shell: Stand Alone Complex">
+        <img src="Ghost in the Shell SAC.png" alt="">
+        <h3>Ghost in the Shell: Stand Alone Complex</h3>
         <small>Mamoru Oshii</small>
         <div class="card-overlay">
           <div class="overlay-content">A philosophical dive into cybernetic identity.</div>
