--- a/staffpicks.html
+++ b/staffpicks.html
@@ -544,6 +544,15 @@
         </div>
       </div>
 
+            <div class="story-card" data-category="film" tabindex="0" aria-label="Open details for Blade Runner 2049">
+        <img src="BLaderunner 2049.jpg" alt="">
+        <h3>Blade Runner 2049</h3>
+        <small>Naoki Urasawa / Netflix</small>
+        <div class="card-overlay">
+          <div class="overlay-content">A noir robot drama reimagining Astro Boy's greatest story arc.</div>
+        </div>
+      </div>
+
       <!-- Other -->
       <div class="story-card" data-category="other" tabindex="0" aria-label="Open details for Neon_Rising">
         <img src="Neon Rising.png" alt="">
