--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
     </a>
     <a href="staffpicks.html" class="card-link">
       <div class="card">
-        <img src="CS2 Keyart.jpg" alt="Staff Picks image">
+        <img src="Ghost in the Shell SAC.png" alt="Staff Picks image">
         <h3>Staff Picks</h3>
       </div>
     </a>
@@ -314,4 +314,5 @@
   </script>
 </body>
 </html>
+
 
