--- a/staffpicks.html
+++ b/staffpicks.html
@@ -404,7 +404,7 @@
 
       <!-- Books -->
       <div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Neuromancer">
-        <img src="Neuromancer.png" alt="">
+        <img src="Neuromancer.jpg" alt="">
         <h3>Neuromancer</h3>
         <small>William Gibson</small>
         <div class="card-overlay">
