--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
   <section class="grid" id="features">
     <a href="fiction.html" class="card-link">
       <div class="card">
-        <img src="AL Cover.png" alt="Featured Stories image">
+        <img src="Card IMG.png" alt="Featured Stories image">
         <h3>Issue Library</h3>
       </div>
     </a>
@@ -314,5 +314,6 @@
   </script>
 </body>
 </html>
+
 
 
