--- a/stories.html
+++ b/stories.html
@@ -132,8 +132,7 @@
       <h1 class="gradient-heading">Featured Stories</h1>
       <p><strong>Editor-selected cyberpunk short fiction</strong> from across Burnline. This page features standout stories in one place so that you can read them in-browser instead of via digital flipbook, if you'd like.</p>
           <p>
-      Interested in having your art featured in the next issue?
-      <a href="submit.html" class="gradient-blue-text">Visit our Submit page.</a>
+      Interested in having your work featured in the next issue? <a href="submit.html" class="gradient-blue-text">Visit our Submit page.</a>
     </p>
       <div class="intro-actions">
         <a class="btn secondary" href="fiction.html">Browse All Issues</a>
