--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
     </a>
     <a href="stories.html" class="card-link">
       <div class="card">
-        <img src="NM Art.png" alt="Poll image">
+        <img src="AL Cover.png" alt="Poll image">
         <h3>Featured Stories</h3>
       </div>
     </a>
@@ -314,6 +314,7 @@
   </script>
 </body>
 </html>
+
 
 
 
